// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu render role listbox renders menu correctly 1`] = `
Array [
  <ul
    class="rc-menu rc-menu-root rc-menu-vertical myMenu"
    data-menu-list="true"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-1"
      role="option"
      tabindex="-1"
    >
      1
    </li>
    <li
      aria-selected="false"
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-2"
      role="option"
      tabindex="-1"
    >
      2
    </li>
    <li
      aria-selected="false"
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-3"
      role="option"
      tabindex="-1"
    >
      3
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;

exports[`Menu should render horizontal menu correctly 1`] = `
Array [
  <ul
    class="rc-menu rc-menu-root rc-menu-horizontal myMenu"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g1"
      >
        g1
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-1"
          role="menuitem"
          tabindex="-1"
        >
          1
        </li>
        <li
          class="rc-menu-item-divider"
        />
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-2"
          role="menuitem"
          tabindex="-1"
        >
          2
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-3"
      role="menuitem"
      tabindex="-1"
    >
      3
    </li>
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g2"
      >
        g2
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-4"
          role="menuitem"
          tabindex="-1"
        >
          4
        </li>
        <li
          aria-disabled="true"
          class="rc-menu-item rc-menu-item-disabled"
          data-menu-id="rc-menu-uuid-test-5"
          role="menuitem"
        >
          5
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-submenu rc-menu-submenu-horizontal"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-tmp_key-3-popup"
        aria-expanded="false"
        aria-haspopup="true"
        class="rc-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-tmp_key-3"
        role="menuitem"
        tabindex="-1"
        title="submenu"
      >
        submenu
        <i
          class="rc-menu-submenu-arrow"
        />
      </div>
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;

exports[`Menu should render horizontal menu with rtl direction correctly 1`] = `
Array [
  <ul
    class="rc-menu rc-menu-root rc-menu-horizontal myMenu rc-menu-rtl"
    data-menu-list="true"
    dir="rtl"
    role="menu"
    tabindex="0"
  >
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g1"
      >
        g1
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-1"
          role="menuitem"
          tabindex="-1"
        >
          1
        </li>
        <li
          class="rc-menu-item-divider"
        />
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-2"
          role="menuitem"
          tabindex="-1"
        >
          2
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-3"
      role="menuitem"
      tabindex="-1"
    >
      3
    </li>
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g2"
      >
        g2
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-4"
          role="menuitem"
          tabindex="-1"
        >
          4
        </li>
        <li
          aria-disabled="true"
          class="rc-menu-item rc-menu-item-disabled"
          data-menu-id="rc-menu-uuid-test-5"
          role="menuitem"
        >
          5
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-submenu rc-menu-submenu-horizontal"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-tmp_key-3-popup"
        aria-expanded="false"
        aria-haspopup="true"
        class="rc-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-tmp_key-3"
        role="menuitem"
        tabindex="-1"
        title="submenu"
      >
        submenu
        <i
          class="rc-menu-submenu-arrow"
        />
      </div>
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;

exports[`Menu should render inline menu correctly 1`] = `
Array [
  <ul
    class="rc-menu rc-menu-root rc-menu-inline myMenu"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g1"
      >
        g1
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-1"
          role="menuitem"
          style="padding-left: 24px;"
          tabindex="-1"
        >
          1
        </li>
        <li
          class="rc-menu-item-divider"
        />
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-2"
          role="menuitem"
          style="padding-left: 24px;"
          tabindex="-1"
        >
          2
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-3"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      3
    </li>
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g2"
      >
        g2
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-4"
          role="menuitem"
          style="padding-left: 24px;"
          tabindex="-1"
        >
          4
        </li>
        <li
          aria-disabled="true"
          class="rc-menu-item rc-menu-item-disabled"
          data-menu-id="rc-menu-uuid-test-5"
          role="menuitem"
          style="padding-left: 24px;"
        >
          5
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-submenu rc-menu-submenu-inline"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-tmp_key-3-popup"
        aria-expanded="false"
        aria-haspopup="true"
        class="rc-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-tmp_key-3"
        role="menuitem"
        style="padding-left: 24px;"
        tabindex="-1"
        title="submenu"
      >
        submenu
        <i
          class="rc-menu-submenu-arrow"
        />
      </div>
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;

exports[`Menu should render inline menu with rtl direction correctly 1`] = `
Array [
  <ul
    class="rc-menu rc-menu-root rc-menu-inline myMenu rc-menu-rtl"
    data-menu-list="true"
    dir="rtl"
    role="menu"
    tabindex="0"
  >
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g1"
      >
        g1
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-1"
          role="menuitem"
          style="padding-right: 24px;"
          tabindex="-1"
        >
          1
        </li>
        <li
          class="rc-menu-item-divider"
        />
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-2"
          role="menuitem"
          style="padding-right: 24px;"
          tabindex="-1"
        >
          2
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-3"
      role="menuitem"
      style="padding-right: 24px;"
      tabindex="-1"
    >
      3
    </li>
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g2"
      >
        g2
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-4"
          role="menuitem"
          style="padding-right: 24px;"
          tabindex="-1"
        >
          4
        </li>
        <li
          aria-disabled="true"
          class="rc-menu-item rc-menu-item-disabled"
          data-menu-id="rc-menu-uuid-test-5"
          role="menuitem"
          style="padding-right: 24px;"
        >
          5
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-submenu rc-menu-submenu-inline"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-tmp_key-3-popup"
        aria-expanded="false"
        aria-haspopup="true"
        class="rc-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-tmp_key-3"
        role="menuitem"
        style="padding-right: 24px;"
        tabindex="-1"
        title="submenu"
      >
        submenu
        <i
          class="rc-menu-submenu-arrow"
        />
      </div>
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;

exports[`Menu should render should support Fragment 1`] = `
Array [
  <ul
    class="rc-menu rc-menu-root rc-menu-vertical"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      class="rc-menu-submenu rc-menu-submenu-vertical"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-tmp_key-0-popup"
        aria-expanded="false"
        aria-haspopup="true"
        class="rc-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-tmp_key-0"
        role="menuitem"
        tabindex="-1"
        title="submenu"
      >
        submenu
        <i
          class="rc-menu-submenu-arrow"
        />
      </div>
    </li>
    <li
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-7"
      role="menuitem"
      tabindex="-1"
    >
      6
    </li>
    <li
      class="rc-menu-submenu rc-menu-submenu-vertical"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-tmp_key-2-popup"
        aria-expanded="false"
        aria-haspopup="true"
        class="rc-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-tmp_key-2"
        role="menuitem"
        tabindex="-1"
        title="submenu"
      >
        submenu
        <i
          class="rc-menu-submenu-arrow"
        />
      </div>
    </li>
    <li
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-9"
      role="menuitem"
      tabindex="-1"
    >
      6
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;

exports[`Menu should render vertical menu correctly 1`] = `
Array [
  <ul
    class="rc-menu rc-menu-root rc-menu-vertical myMenu"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g1"
      >
        g1
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-1"
          role="menuitem"
          tabindex="-1"
        >
          1
        </li>
        <li
          class="rc-menu-item-divider"
        />
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-2"
          role="menuitem"
          tabindex="-1"
        >
          2
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-3"
      role="menuitem"
      tabindex="-1"
    >
      3
    </li>
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g2"
      >
        g2
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-4"
          role="menuitem"
          tabindex="-1"
        >
          4
        </li>
        <li
          aria-disabled="true"
          class="rc-menu-item rc-menu-item-disabled"
          data-menu-id="rc-menu-uuid-test-5"
          role="menuitem"
        >
          5
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-submenu rc-menu-submenu-vertical"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-tmp_key-3-popup"
        aria-expanded="false"
        aria-haspopup="true"
        class="rc-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-tmp_key-3"
        role="menuitem"
        tabindex="-1"
        title="submenu"
      >
        submenu
        <i
          class="rc-menu-submenu-arrow"
        />
      </div>
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;

exports[`Menu should render vertical menu with rtl direction correctly 1`] = `
Array [
  <ul
    class="rc-menu rc-menu-root rc-menu-vertical myMenu rc-menu-rtl"
    data-menu-list="true"
    dir="rtl"
    role="menu"
    tabindex="0"
  >
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g1"
      >
        g1
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-1"
          role="menuitem"
          tabindex="-1"
        >
          1
        </li>
        <li
          class="rc-menu-item-divider"
        />
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-2"
          role="menuitem"
          tabindex="-1"
        >
          2
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-3"
      role="menuitem"
      tabindex="-1"
    >
      3
    </li>
    <li
      class="rc-menu-item-group"
    >
      <div
        class="rc-menu-item-group-title"
        title="g2"
      >
        g2
      </div>
      <ul
        class="rc-menu-item-group-list"
      >
        <li
          class="rc-menu-item"
          data-menu-id="rc-menu-uuid-test-4"
          role="menuitem"
          tabindex="-1"
        >
          4
        </li>
        <li
          aria-disabled="true"
          class="rc-menu-item rc-menu-item-disabled"
          data-menu-id="rc-menu-uuid-test-5"
          role="menuitem"
        >
          5
        </li>
      </ul>
    </li>
    <li
      class="rc-menu-submenu rc-menu-submenu-vertical"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-tmp_key-3-popup"
        aria-expanded="false"
        aria-haspopup="true"
        class="rc-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-tmp_key-3"
        role="menuitem"
        tabindex="-1"
        title="submenu"
      >
        submenu
        <i
          class="rc-menu-submenu-arrow"
        />
      </div>
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;
